kubernetes/locust-master.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    role: locust-master
  name: locust-master
spec:
  replicas: 1
  selector:
    matchLabels:
      role: locust-master
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        role: locust-master
    spec:
      containers:
      - image: sudomann/iroha-locust:latest
        name: locust-master
        imagePullPolicy: Always
        volumeMounts:
          - name: locustfile-mount
            mountPath: /locust/locustfile.py
            subPath: locustfile.py            
        ports:
        - containerPort: 5557
          name: comm
        - containerPort: 5558
          name: comm-plus-1
        - containerPort: 8089
          name: web-ui
        resources: {}
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - name: locustfile-mount
        configMap:
          name: locustfile
