kubernetes/locust-slave.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    role: locust-slave
  name: locust-slave
spec:
  replicas: 2
  selector:
    matchLabels:
      role: locust-slave
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        role: locust-slave
    spec:
      containers:
      - image: sudomann/iroha-locust:latest
        imagePullPolicy: Always
        name: locust-slave
        volumeMounts:
          - name: locustfile-mount
            mountPath: /locust/locustfile.py
            subPath: locustfile.py  
        resources: {}
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - name: locustfile-mount
        configMap:
          name: locustfile
