kubernetes/locust-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
  name: locust-web-ui
spec:
  backend:
    serviceName: locust-master
    servicePort: 8089
